# PangPangGame

./: .gitignore  CMakeLists.txt  README.md  main.py  pangpanggameAI.py
include/: game.h  strategy.h
src/: game.cc  main.cc
strategies/: HumanStrat.cc  MachineStrat0.cc  MachineStrat1.cc  MachineStrat2.cc
